# epistemic-control-kernel

./: CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  scratch_test_4c.py
docs/: commit-4b-confidence-intent.md  commit-4c-go-no-go_checklist.md  eba-commit-4a-boundary.md  eba-confidence-breadth.md  eba-confidence-observability.md  eba-confidence-vs-llm-uncertainty.md  eba-confidence.md  eba-policy-modes.md  eba-roadmap.md  eba-rolling-confidence-semantics.md  eck-confidence-breadth.md  eck-confidence-ewma-sketch.md  eck-confidence-observability.md  eck-confidence-vs-llm-uncertainty.md  eck-confidence.md  eck-policy-modes.md  eck-roadmap.md  eck-rolling-confidence-semantics.md
docs/adr/: ADR-00X-deferred-enforcement.md
docs/appendix/: eba-confidence-failure-asymmetry.md  eck-confidence-failure-asymmetry.md
eba/: __init__.py  agent.py  config.py  critic.py  drift.py  execution.py  memory.py  models.py  prediction.py  prompts.py  queue.py  task.py  task_generation.py  utils.py
eck/: Move drift.py to eck package folder  __init__.py  agent.py  config.py  critic.py  drift.py  execution.py  memory.py  models.py  prediction.py  prompts.py  queue.py  task.py  utils.py
examples/: basic_run.py  openai_run.py
tests/: test_agent.py  test_config.py  test_critic.py  test_drift.py  test_execution.py  test_memory.py  test_prediction.py  test_prompts.py  test_queue.py  test_task.py  test_task_generation.py  test_utils.py  test_utils_parse.py
