[project]
name = "eba-core"
dynamic = ["version"]
description = "Enhanced BabyAGI: A perceptually self-regulating autonomous agent with predictive foresight and drift detection"
keywords = ["agent", "agi", "autonomous", "babyagi"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "robotransit"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.2",
    "langchain-openai",
    "sentence-transformers",
    "numpy",
    "pinecone-client",  # optional
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eba"]
