[project]
name = "epistemic-control-kernel"
dynamic = ["version"]
description = "A reliability-focused control kernel for autonomous agents with prediction, execution, evaluation, drift detection, and policy-based gating."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "epistemic-control",
    "agent",
    "reliability",
    "drift-detection",
    "self-regulation",
    "autonomous-systems",
]
authors = [
    {name = "robotransit"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "eck/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["eck"]
